welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:16: error: Boolean does not take parameters
	{
        ^